# caipi

./: .gitignore  AGENTS.md  BEST_PRACTICES.md  CLAUDE.md  CODE_REVIEW.md  FINDINGS.md  LICENSE  MULTI_BACKEND_PRD.md  MULTI_WINDOW.md  README.md  REBUILD_PLAN.md  STOP_BUTTON_WIP.md  TESTING.md  TESTING_RETROSPECTIVE.md  TODOS.md  ai.py  api.py  app.py  auth.py  llm.py  llm2.py  mock.jsx  models.py  package-lock.json  package.json  requirements.txt  review.md  spielwiese.ipynb  spielwiese.py  sql.py  swa-cli.config.json  tailwind.config.js  test.html  tool-demo.jsx  utils.py  vitest.config.ts  viz.py
api/: ai.py  build.py  cosmos.py  function_app.py  main.py  models.py  oryx.yml  requirements.txt  spielwiese.py  utils.py  views.py
componenets_v2/: Accordion.jinja  (+4 more)
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: codex_tools.rs  lib.rs  main.rs
src-tauri/src/backends/: mod.rs  runtime.rs  session.rs  types.rs  utils.rs
src-tauri/src/backends/claude/: adapter.rs  cli_adapter.rs  cli_protocol.rs  event_handler.rs  hooks.rs  mod.rs  sessions.rs  settings.rs  tool_utils.rs
src-tauri/src/backends/codex/: adapter.rs  cli_protocol.rs  event_handler.rs  events.rs  mod.rs  sessions.rs
src-tauri/src/claude/: agent.rs  cli_protocol.rs  hooks.rs  mod.rs  permissions.rs  settings.rs  tool_utils.rs
src-tauri/src/commands/: chat.rs  events.rs  files.rs  folder.rs  license.rs  mod.rs  sessions.rs  setup.rs
src-tauri/src/storage/: mod.rs
src-tauri/tests/: cli_verify.rs
(+210 files in other folders)
